--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.6.3",
     "@types/jest": "^26.0.20",
-    "@types/ledgerhq__hw-transport-u2f": "^4.21.2",
     "@types/node": "^14.14.25",
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
@@ -27,8 +26,7 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "react-scripts eject",
-    "update-taquito": "ncu -u --target newest --filter '/^@taquito.*$/' && npm i"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
