--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^17.0.1",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.3",
+    "@web3-react/core": "^6.1.9",
+    "@web3-react/injected-connector": "^6.0.7",
     "axios": "^1.1.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
