--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@airgap/beacon-sdk": "^3.1.4",
     "@craco/craco": "^6.4.5",
+    "@ethersproject/providers": "^5.7.1",
     "@taquito/beacon-wallet": "^14.0.0",
     "@taquito/taquito": "^14.0.0",
     "@taquito/utils": "^14.0.0",
