--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gsap": "^3.11.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
