--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.1",
+    "react-h5-audio-player": "^3.8.6",
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
