--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
-    "typescript": "^4.1.4"
+    "typescript": "^4.1.4",
+    "zustand": "^4.1.3"
   },
   "scripts": {
     "start": "craco start",
