--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@web3-react/injected-connector": "^6.0.7",
     "axios": "^1.1.2",
     "gsap": "^3.11.3",
+    "phosphor-react": "^1.4.1",
     "react": "^17.0.1",
+    "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.1",
     "react-h5-audio-player": "^3.8.6",
