--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@airgap/beacon-sdk": "^3.1.4",
     "@craco/craco": "^6.4.5",
     "@ethersproject/providers": "^5.7.1",
+    "@stripe/react-stripe-js": "^1.16.4",
+    "@stripe/stripe-js": "^1.46.0",
     "@taquito/beacon-wallet": "^14.0.0",
     "@taquito/taquito": "^14.0.0",
     "@taquito/utils": "^14.0.0",
@@ -21,9 +23,11 @@
     "@web3-react/core": "^6.1.9",
     "@web3-react/injected-connector": "^6.0.7",
     "axios": "^1.1.2",
+    "firebase": "^9.16.0",
     "gsap": "^3.11.3",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.7.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^17.0.1",
     "react-ga": "^3.3.1",
@@ -31,6 +35,7 @@
     "react-icons": "^4.6.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "4.0.2",
+    "stripe": "^11.9.1",
     "typescript": "^4.1.4",
     "zustand": "^4.1.3"
   },
